# tgbot

./: .gitignore  pyproject.toml
core/: settings.py
core/apps/bot/: apps.py
