[tool.poetry]
name = "tgbotanalytics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.2"
django-grappelli = "*"
environs = "9.5.0"
gunicorn = "20.1.0"
pyTelegramBotAPI = "4.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
